@@ -16,6 +16,7 @@
 	ADDED - Cacti plugin caches thumbnail sizes, improving thumbnail view rendering
 	ADDED - Cacti plugin allows adding the same map twice (more useful than it sounds)
 	ADDED - Cacti plugin allows setting of map-global variables in the management UI
+	ADDED - Cacti plugin allows settings of global map-global (across all maps) variables too
 	ADDED - Cacti plugin adds links in 'user' pages to management screen (if you are an admin)
 	CHANGE - Cacti plugin uses "processed" map title now (allows {} tokens in the title)
 	CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
